# recython

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  MANIFEST.in  Makefile  README.md  benchmark.py  build.py  copy_recython.py  go.py  mypyc_setup.py  pyproject.toml  setup.py
.github/workflows/: build.yml  create_draft_release.yml  release.yml
dead_code_do_not_look/: build.py  cython_setup.py
dead_code_do_not_look/recython_pure/: benchmark_utils.py  cython_style_pxd.md  main.py  scrape.py
dead_code_do_not_look/recython_pure/docs/: cython_tutorial.html.md  numpy.html.md
docs/: TODO.md  modernization_plan.md
docs_todo/: modernization_plan.md
examples/scr_file_io/file_io/: __main__.py
examples/scr_regex/some_regex/: __main__.py
examples/src_fuzzy_arithmetic/fuzzy_arithmetic/: __init__.py  __main__.py
examples/src_hangman/hangman/: __main__.py  tests.py
examples/src_multiple_regression/multiple_regression/: __init__.py  __main__.py
examples/src_orbital_mechanics/orbital_mechanics/: __init__.py  __main__.py
examples_benchmark/: Makefile  README.md  benchmark.py
examples_benchmark/fuzzy_arithmetic_cy/: fuzzy_arithmetic_cy.c  fuzzy_arithmetic_cy.html  fuzzy_arithmetic_cy.pyx  setup.py
examples_benchmark/multiple_regression_cy/: multiple_regression_cy.c  multiple_regression_cy.html  multiple_regression_cy.pyx  setup.py
examples_benchmark/orbital_mechanics_cy/: orbital_mechanics_cy.c  orbital_mechanics_cy.html  orbital_mechanics_cy.pyx  setup.py
examples_generate/: generate.py
examples_generate/examples/src_hangman/hangman/: __main__.py.pxd  __main__.py.pyx
examples_generate/examples/src_multiple_regression/multiple_regression/: __main__.py.pxd  __main__.py.pyx
recython/: __init__.c  __init__.py  __main__.c  __main__.html  __main__.py  ai_calls.py  classic_style.py  cli.py  compilation_check.c  compilation_check.html  compilation_check.py  config.py  cython_pure_python_style.md  cython_style_pxd.md  cython_style_pyx.md  engine.py  filesystem.c  filesystem.html  filesystem.py  jobs.py  main.c  main.html  main.py  prompts.py  pure_style.py  scrape.c  scrape.html  scrape.py  tidy.c  tidy.html  tidy.py
recython/docs/: clibraries.html.md  pxd_files.html.md
recython/validation/: __init__.py  compile.py
recython_pure/: cython_pure_python_style.md  filesystem.py  tidy.py
recython_pure/docs/: array.html.md  caveats.html.md  cdef_classes.html.md  external.html.md  memory_allocation.html.md  parallelization.html.md  pure.html.md  strings.html.md
tests/: env_util.py  test_ai_calls.py  test_classic.py  test_cli.py  test_config.py  test_engine.py  test_pure.py  test_scrape.py  test_tidy.py
