[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "recython"
version = "0.1.0"
description = "Use LLMs to assist in turning ordinary Python into Cython-oriented source layouts."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
  { name = "Matthew Martin", email = "matthewdeanmartin@gmail.com" },
]
keywords = ["cython", "llm", "openai", "codegen"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "beautifulsoup4",
  "cython>=3.0.0",
  "markdownify",
  "openai>=1.0.0",
  "python-dotenv>=1.0.1",
  "requests",
]

[project.urls]
Homepage = "https://github.com/matthewdeanmartin/recython"
Repository = "https://github.com/matthewdeanmartin/recython"
Documentation = "https://github.com/matthewdeanmartin/recython"
"Bug Tracker" = "https://github.com/matthewdeanmartin/recython/issues"

[project.scripts]
recython = "recython.__main__:run"
ais = "recython.__main__:run"

[dependency-groups]
dev = [
  "black>=23.11.0",
  "codespell>=2.2.6",
  "cython-lint",
  "interrogate>=1.5.0",
  "linkcheckmd>=1.4.0",
  "mdformat>=0.7.17",
  "metametameta>=0.1.0",
  "mypy>=1.8.0",
  "pdoc3>=0.10.0",
  "pre-commit>=3.5.0",
  "pydoctest>=0.1.22",
  "pyenchant>=3.2.2",
  "pytest>=7.4.3",
  "pytest-cov>=4.1.0",
  "ruff",
  "types-beautifulsoup4",
  "types-requests",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.pip]
universal = true
[tool.hatch.version]
path = "recython/__about__.py"

[tool.hatch.build]
include = [
  "/LICENSE",
  "/README.md",
  "/docs/**/*.md",
  "/examples/**/*.py",
  "/examples_generate/**/*.py",
  "/recython/**/*.html",
  "/recython/**/*.jinja",
  "/recython/**/*.md",
  "/recython/**/*.py",
  "/recython/**/*.txt",
  "/recython/py.typed",
  "/recython_pure/**/*.html",
  "/recython_pure/**/*.jinja",
  "/recython_pure/**/*.md",
  "/recython_pure/**/*.py",
  "/recython_pure/**/*.txt",
  "/recython_pure/py.typed",
  "/tests/**/*.py",
]

[tool.hatch.build.targets.wheel]
packages = ["recython", "recython_pure"]

[tool.hatch.envs.default]
features = []

[tool.hatch.envs.default.scripts]
test = "pytest"
lint = "ruff check ."
format = "black ."

[tool.black]
line-length = 120
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py
)
'''

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["test", "tests"]
junit_family = "xunit1"
norecursedirs = ["vendor", "scripts"]

[tool.isort]
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = ["recython"]
line_length = 120
multi_line_output = 3
use_parentheses = true

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
  "dead_code",
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

[tool.ruff.lint]
select = ["E", "F", "D", "UP", "B"]
ignore = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D107",
  "D200",
  "D205",
  "D212",
  "D411",
  "D415",
  "E722",
  "UP007",
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.scriv]
version = "literal: recython/__about__.py: __version__"
format = "md"
main_branches = "master, main, develop, dev"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
strict = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_no_return = true

[[tool.mypy.overrides]]
module = ["cython", "markdownify"]
ignore_missing_imports = true

[tool.cli-tools]
mypy = { version = ">=1.8.0" }
pylint = { version = ">=3.0.2" }
ruff = { version = ">=0.1.9" }
black = { version = ">=23.11.0" }
pygount = { version = "*" }

[tool.bug_trail]
app_name = "recython"
app_author = "matthewdeanmartin"
source_folder = "recython"
